fixed mozilla overlapping

--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@
     #info{
         display: block;
     }
+
+    #accordion2{
+        margin-bottom: 2em;
+    }
 }
 
 @media(min-width: 1025px){
